test/integration/httproute/manifests/session_persistence/session-persistence-absolutetimeout-cookieconfig-permanent/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - "example.haproxy"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sticky
      backendRefs:
        - name: http-echo
          port: 80
      sessionPersistence:
        type: Cookie
        sessionName: "sticky-cookie"
        absoluteTimeout: 60s
        cookieConfig:
          lifetimeType: Permanent
